<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/baselib_dp30"
    android:paddingRight="@dimen/baselib_dp30"
    android:paddingTop="@dimen/baselib_dp30">

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/baselib_dp40"
        android:background="@drawable/main_round_rect_grey"
        android:gravity="center_vertical"
        android:hint="@string/main_string_please_input_phone"
        android:inputType="number"
        android:maxLength="11"
        android:maxLines="1"
        android:padding="@dimen/baselib_dp10"
        android:textSize="@dimen/baselib_dp15" />

    <LinearLayout
        android:id="@+id/ll_verify_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/baselib_dp40"
        android:layout_marginTop="@dimen/baselib_dp16"
        android:background="@drawable/main_round_rect_grey"
        android:gravity="center_vertical"
        android:padding="@dimen/baselib_dp10"
        app:layout_constraintTop_toBottomOf="@id/et_phone">

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/main_string_input_code"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="@dimen/baselib_dp15" />

        <View
            android:layout_width="@dimen/baselib_dp1"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/baselib_dp12"
            android:layout_marginRight="@dimen/baselib_dp12"
            android:background="@color/main_color_DDDDDD" />

        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_string_get_code"
            android:textColor="@color/main_color_EF5227"
            android:textSize="@dimen/baselib_dp12" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/baselib_dp40"
        android:layout_marginTop="@dimen/baselib_dp16"
        android:background="@drawable/main_round_rect_grey"
        android:gravity="center_vertical"
        android:hint="@string/main_string_setpwd"
        android:inputType="textPassword"
        android:maxLength="12"
        android:maxLines="1"
        android:padding="@dimen/baselib_dp10"
        android:textSize="@dimen/baselib_dp15"
        app:layout_constraintTop_toBottomOf="@id/ll_verify_code" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/baselib_dp40"
        android:layout_marginTop="@dimen/baselib_dp30"
        android:background="@drawable/main_round_rect_red"
        android:gravity="center"
        android:text="@string/main_string_register"
        android:textColor="@color/main_color_FFFFFF"
        android:textSize="@dimen/baselib_dp18"
        app:layout_constraintTop_toBottomOf="@id/et_pwd" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/baselib_dp8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_register">

        <CheckBox
            android:id="@+id/cb_register_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/main_string_register_protocol"
            android:textColor="@color/main_color_535050"
            android:textSize="@dimen/baselib_dp14" />

        <TextView
            android:id="@+id/tv_register_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_string_register_protocol1"
            android:textColor="@color/main_color_535050"
            android:textSize="@dimen/baselib_dp14" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
