<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/baselib_dp30"
    android:paddingRight="@dimen/baselib_dp30"
    android:paddingTop="@dimen/baselib_dp30">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/baselib_dp40"
        android:background="@drawable/main_round_rect_grey"
        android:drawableLeft="@drawable/main_ic_user_name"
        android:drawablePadding="@dimen/baselib_dp5"
        android:gravity="center_vertical"
        android:hint="@string/main_string_username"
        android:maxLines="1"
        android:paddingLeft="@dimen/baselib_dp10"
        android:textSize="@dimen/baselib_dp15" />

    <EditText
        android:id="@+id/et_userpwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/baselib_dp40"
        android:layout_marginTop="@dimen/baselib_dp16"
        android:background="@drawable/main_round_rect_grey"
        android:drawableLeft="@drawable/main_ic_user_pwd"
        android:drawablePadding="@dimen/baselib_dp7"
        android:enabled="true"
        android:gravity="center_vertical"
        android:hint="@string/main_string_userpwd"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="@dimen/baselib_dp13"
        android:textSize="@dimen/baselib_dp15"
        app:layout_constraintTop_toBottomOf="@id/et_username" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/baselib_dp40"
        android:layout_marginTop="@dimen/baselib_dp30"
        android:background="@drawable/main_round_rect_red"
        android:gravity="center"
        android:text="@string/main_string_login"
        android:textColor="@color/main_color_FFFFFF"
        android:textSize="@dimen/baselib_dp18"
        app:layout_constraintTop_toBottomOf="@id/et_userpwd" />

    <TextView
        android:id="@+id/tv_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/baselib_dp8"
        android:text="@string/main_string_forget_pwd"
        android:textColor="@color/main_color_828282"
        android:textSize="@dimen/baselib_dp15"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_login" />
</android.support.constraint.ConstraintLayout>
