<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_FFFFFF"
    android:scrollbars="none">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/baselib_dp30"
            android:layout_marginTop="@dimen/baselib_dp45"
            android:src="@drawable/main_ic_user_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="@dimen/baselib_dp24"
            android:layout_marginLeft="@dimen/baselib_dp10"
            android:layout_marginRight="@dimen/baselib_dp30"
            android:layout_marginTop="@dimen/baselib_dp43"
            android:background="@null"
            android:hint="@string/main_string_please_input_phone"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true"
            android:textSize="@dimen/baselib_dp16"
            app:layout_constraintLeft_toRightOf="@id/iv_phone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="@dimen/baselib_dp0.5"
            android:layout_marginRight="@dimen/baselib_dp30"
            android:layout_marginTop="@dimen/baselib_dp5"
            android:background="@color/main_color_DDDDDD"
            app:layout_constraintLeft_toLeftOf="@id/et_phone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_phone" />

        <ImageView
            android:id="@+id/iv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/baselib_dp32.5"
            android:layout_marginTop="@dimen/baselib_dp20"
            android:src="@drawable/main_ic_phone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="@dimen/baselib_dp24"
            android:layout_marginLeft="@dimen/baselib_dp12"
            android:layout_marginRight="@dimen/baselib_dp10"
            android:layout_marginTop="@dimen/baselib_dp18"
            android:background="@null"
            android:hint="@string/main_string_please_input_code"
            android:inputType="number"
            android:maxLength="20"
            android:singleLine="true"
            android:textSize="@dimen/baselib_dp16"
            app:layout_constraintLeft_toRightOf="@id/iv_code"
            app:layout_constraintRight_toLeftOf="@id/view2"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <View
            android:id="@+id/view2"
            android:layout_width="@dimen/baselib_dp0.5"
            android:layout_height="@dimen/baselib_dp30"
            android:layout_marginRight="@dimen/baselib_dp10"
            android:layout_marginTop="@dimen/baselib_dp15"
            android:background="@color/main_color_DDDDDD"
            app:layout_constraintRight_toLeftOf="@id/tv_get_code"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/baselib_dp30"
            android:layout_marginTop="@dimen/baselib_dp17"
            android:text="@string/main_string_get_code"
            android:textColor="@color/main_color_EF5227"
            android:textSize="@dimen/baselib_dp16"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <View
            android:id="@+id/line2"
            android:layout_width="0dp"
            android:layout_height="@dimen/baselib_dp0.5"
            android:layout_marginRight="@dimen/baselib_dp30"
            android:layout_marginTop="@dimen/baselib_dp5"
            android:background="@color/main_color_DDDDDD"
            app:layout_constraintLeft_toLeftOf="@id/et_code"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_code" />

        <ImageView
            android:id="@+id/iv_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/baselib_dp32.5"
            android:layout_marginTop="@dimen/baselib_dp20"
            android:src="@drawable/main_ic_user_pwd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line2" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="0dp"
            android:layout_height="@dimen/baselib_dp24"
            android:layout_marginLeft="@dimen/baselib_dp12"
            android:layout_marginRight="@dimen/baselib_dp30"
            android:layout_marginTop="@dimen/baselib_dp17"
            android:background="@null"
            android:hint="@string/main_string_please_reset_pwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="@dimen/baselib_dp16"
            app:layout_constraintLeft_toRightOf="@id/iv_pwd"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line2" />

        <View
            android:id="@+id/line3"
            android:layout_width="0dp"
            android:layout_height="@dimen/baselib_dp0.5"
            android:layout_marginRight="@dimen/baselib_dp30"
            android:layout_marginTop="@dimen/baselib_dp5"
            android:background="@color/main_color_DDDDDD"
            app:layout_constraintLeft_toLeftOf="@id/et_pwd"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_pwd" />

        <Button
            android:id="@+id/bt_ok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/baselib_dp40"
            android:layout_marginLeft="@dimen/baselib_dp30"
            android:layout_marginRight="@dimen/baselib_dp30"
            android:layout_marginTop="@dimen/baselib_dp50"
            android:background="@drawable/main_round_rect_red"
            android:gravity="center"
            android:text="@string/main_string_ok"
            android:textColor="@color/main_color_FFFFFF"
            android:textSize="@dimen/baselib_dp18"
            app:layout_constraintTop_toBottomOf="@id/et_pwd" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
