<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="560dp"
    android:background="@color/main_color_FFFFFF"
    android:paddingLeft="@dimen/baselib_dp16"
    android:paddingRight="@dimen/baselib_dp16">
    
    <TextView
        android:id="@+id/tv1"
        android:layout_width="0dp"
        android:layout_height="@dimen/baselib_dp66"
        android:drawableLeft="@drawable/main_ic_bed_home"
        android:drawablePadding="@dimen/baselib_dp18"
        android:gravity="center_vertical"
        android:text="@string/main_string_bed"
        android:textColor="@color/main_color_060606"
        android:textSize="@dimen/baselib_dp18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="@dimen/baselib_dp0.5"
        android:background="@color/main_color_DDDDDD"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv1"/>
    
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical"
        android:paddingBottom="@dimen/baselib_dp15"
        android:paddingTop="@dimen/baselib_dp15"
        app:layout_constraintTop_toBottomOf="@id/view1">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="灯带开关"
            android:textColor="@color/main_color_060606"
            android:textSize="@dimen/baselib_dp18"/>
        
        <CheckBox
            android:id="@+id/cb_led"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/baselib_dp10"
            android:background="@color/main_color_transparent"
            android:button="@drawable/main_selector_switch"
            android:checked="false"/>
        
        <TextView
            android:id="@+id/tv_led_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/baselib_dp8"
            android:text="@string/main_string_close"
            android:textColor="@color/baselib_color_A5A5A5"
            android:textSize="@dimen/baselib_dp12"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/baselib_dp15"
        android:paddingTop="@dimen/baselib_dp15"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="升降床开关"
            android:textColor="@color/main_color_060606"
            android:textSize="@dimen/baselib_dp18"/>
        
        <LinearLayout
            android:layout_width="@dimen/baselib_dp135"
            android:layout_height="@dimen/baselib_dp30"
            android:layout_marginTop="@dimen/baselib_dp10"
            android:background="@drawable/main_round_rect_grey"
            android:orientation="horizontal">
            
            <LinearLayout
                android:id="@+id/ll_open"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">
                
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/main_ic_bed_open"/>
            </LinearLayout>
            
            <View
                android:layout_width="@dimen/baselib_dp0.5"
                android:layout_height="match_parent"
                android:background="@color/main_color_DDDDDD"/>
            
            <LinearLayout
                android:id="@+id/ll_pause"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">
                
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/main_ic_bed_pause"/>
            </LinearLayout>
            
            <View
                android:layout_width="@dimen/baselib_dp0.5"
                android:layout_height="match_parent"
                android:background="@color/main_color_DDDDDD"/>
            
            <LinearLayout
                android:id="@+id/ll_close"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">
                
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/main_ic_bed_close"/>
            </LinearLayout>
        
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/baselib_dp8"
            android:orientation="horizontal">
            
            <TextView
                android:id="@+id/tv_bed_open"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_string_open"
                android:textColor="@color/baselib_color_A5A5A5"
                android:textSize="@dimen/baselib_dp12"/>
            
            <TextView
                android:id="@+id/tv_bed_pause"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_string_pause"
                android:textColor="@color/baselib_color_A5A5A5"
                android:textSize="@dimen/baselib_dp12"/>
            
            <TextView
                android:id="@+id/tv_bed_close"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_string_close"
                android:textColor="@color/baselib_color_A5A5A5"
                android:textSize="@dimen/baselib_dp12"/>
        </LinearLayout>
    </LinearLayout>
    
    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="@dimen/baselib_dp0.5"
        android:background="@color/main_color_DDDDDD"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll1"/>
    
    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/baselib_dp15"
        android:text="手动控制升降床"
        android:textColor="@color/main_color_060606"
        android:textSize="@dimen/baselib_dp18"
        app:layout_constraintTop_toBottomOf="@id/view2"/>
    
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/baselib_dp300"
        android:layout_marginTop="@dimen/baselib_dp15"
        android:paddingLeft="@dimen/baselib_dp10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv2">
        
        <ImageView
            android:id="@+id/iv_bed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/baselib_dp13"
            android:src="@drawable/main_ic_bed2"/>
        
        <com.app.main.widget.VerticalSeekBar
            android:id="@+id/sb"
            android:layout_width="@dimen/baselib_dp26"
            android:layout_height="match_parent"/>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>
